Update JWT: @deprecated된 메소드 사용하지 않도록 변경함.